[tool.ruff]
target-version = "py312"
line-length = 110
indent-width = 4
fix = true
exclude = ["build", "dist", ".venv", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

[tool.black]
line-length = 110
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

[project]
name = "smart-web-scraping"
version = "0.1.0"
description = "AI-enhanced web scraper with stealth and smart parsing"
authors = [
    {name = "Leandro M. F. Machado", email = "leandrofahur@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",    
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests",    
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=scraper",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[project.scripts]
run-scraper = "scripts.run_scraper:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"